syntax = "proto3";
package edgeproto;

import "google/api/annotations.proto";
import "result.proto";
import "github.com/mobiledgex/edge-cloud/protogen/protogen.proto";
import "gogoproto/gogo.proto";
import "app.proto";
import "cloudletpool.proto";
import "trustpolicy.proto";


option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_sizecache_all) = false;

enum TrustPolicyExceptionState {
  // Unknown state
  TRUST_POLICY_EXCEPTION_STATE_UNKNOWN = 0;
  // Created but not sent for approval
  TRUST_POLICY_EXCEPTION_STATE_CREATED = 1;
  // Awaiting approval
  TRUST_POLICY_EXCEPTION_STATE_APPROVAL_REQUESTED = 2;
  // Approved by Operator and active
  TRUST_POLICY_EXCEPTION_STATE_ACTIVE = 3;
  // Rejected by Operator
  TRUST_POLICY_EXCEPTION_STATE_REJECTED = 4;
}


message TrustPolicyExceptionKey {
  // App Key
  AppKey app_key = 1 [(gogoproto.nullable) = false, (protogen.keytag) = "appkey"];
  // CloudletPool Key
  CloudletPoolKey cloudlet_pool_key = 2  [(gogoproto.nullable) = false, (protogen.keytag) = "cloudletpoolkey"];
  string Name = 3 [(protogen.keytag) = "name"]; 
  option (protogen.generate_matches) = true;
  option (protogen.obj_key) = true;
  option (gogoproto.gostring) = true;
}

message TrustPolicyException {
  // Fields are used for the Update API to specify which fields to apply
  repeated string fields = 1;
  // Unique Key composed of App and CloudletPool key
  TrustPolicyExceptionKey key = 2 [(gogoproto.nullable) = false];
  // List of outbound security rules for whitelisting traffic
  repeated SecurityRule outbound_security_rules = 3 [(gogoproto.nullable) = false];
  // State of the exception within the approval process
  TrustPolicyExceptionState state = 4;
  option (protogen.generate_matches) = true;
  option (protogen.generate_cud) = true;
  option (protogen.generate_cud_test) = true;  
  option (protogen.generate_cud_streamout) = true;
  option (protogen.generate_cache) = true;
  option (protogen.notify_cache) = true;
  option (protogen.alias) = "name=Key.Name,cloudlet-org=Key.CloudletPoolKey.Organization";
  option (protogen.uses_org) = "key=AppKey.Organization";
}




service TrustPolicyExceptionApi {

  // Create a Trust Policy Exception, by App Developer Organization
  rpc CreateTrustPolicyException(TrustPolicyException) returns (stream Result) {
    option (google.api.http) = {
      post: "/create/trustpolicyexception"
      body: "*"
    };
    option (protogen.stream_out_incremental) = true;
    option (protogen.mc2_api) = "ResourceApps,ActionManage,Key.AppKey.Organization";
    option (protogen.mc2_api_requires_org) = "Key.AppKey.Organization";
  }
  // Update a Trust Policy Exception, by App Developer Organization
  rpc UpdateTrustPolicyException(TrustPolicyException) returns (stream Result) {
    option (google.api.http) = {
      post: "/update/trustpolicyexception"
      body: "*"
    };
    option (protogen.stream_out_incremental) = true;
    option (protogen.mc2_api) = "ResourceApps,ActionManage,Key.AppKey.Organization";
    option (protogen.mc2_api_requires_org) = "Key.AppKey.Organization";
  }
  // Request a Trust Policy Exception to be approved, request made by App Developer Organization 
  rpc RequestApprovalTrustPolicyException(TrustPolicyException) returns (stream Result) {
    option (google.api.http) = {
      post: "/requestapproval/trustpolicyexception"
      body: "*"
    };
    option (protogen.stream_out_incremental) = true;
    option (protogen.mc2_api) = "ResourceApps,ActionManage,Key.AppKey.Organization";
    option (protogen.mc2_api_requires_org) = "Key.AppKey.Organization";
  }

  // Approve a Trust Policy Exception, by Cloudlet Operator Organization 
  rpc ApproveTrustPolicyException(TrustPolicyException) returns (stream Result) {
    option (google.api.http) = {
      post: "/approve/trustpolicyexception"
      body: "*"
    };
    option (protogen.stream_out_incremental) = true;
    option (protogen.mc2_api) = "ResourceCloudletPools,ActionManage,Key.CloudletPoolKey.Organization";
    option (protogen.mc2_api_requires_org) = "Key.CloudletPoolKey.Organization";
  }
  // Reject a Trust Policy Exception, by Cloudlet Operator Organization 
  rpc RejectTrustPolicyException(TrustPolicyException) returns (stream Result) {
    option (google.api.http) = {
      post: "/reject/trustpolicyexception"
      body: "*"
    };
    option (protogen.stream_out_incremental) = true;
    option (protogen.mc2_api) = "ResourceCloudletPools,ActionManage,Key.CloudletPoolKey.Organization";
    option (protogen.mc2_api_requires_org) = "Key.CloudletPoolKey.Organization";
  }
  // Delete a Trust policy exception, by App Developer Organization
  rpc DeleteTrustPolicyException(TrustPolicyException) returns (stream Result) {
    option (google.api.http) = {
      post: "/delete/trustpolicyexception"
      body: "*"
    };
    option (protogen.stream_out_incremental) = true;
    option (protogen.mc2_api) = "ResourceApps,ActionManage,Key.AppKey.Organization";
  }
  // Show Trust Policies. Any fields specified will be used to filter results.
  rpc ShowTrustPolicyException(TrustPolicyException) returns (stream TrustPolicyException) {
    option (google.api.http) = {
      post: "/show/trustpolicyexception"
      body: "*"
    };
    option (protogen.mc2_api) = "ResourceApps,ActionView,Key.AppKey.Organization";
    option (protogen.mc2_custom_authz) = true;
  }
}
